<resources>
    <string name="app_name">BuyAuto</string>
    <string name="txt_example_email">Example@gmail.com</string>
    <string name="txt_password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="repeat_password">repeat password</string>
    <string name="sign_up">sign up</string>
    <string name="username">username</string>
    <string name="log_in">log in</string>
    <string name="please_fill_all_field">Please Fill All Fields</string>
    <string name="incorrect_email">Incorrect Email address</string>
    <string name="password_is_too_short">Password is too short</string>
    <string name="passwords_does_not_matches">password does not match</string>
    <string name="choose_images">choose images</string>
    <string name="successfully_added">Successfully added car item</string>
    <string name="ok">OK</string>
    <string name="successfully_created_account">successfully created new account</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="description">description</string>
    <string name="price">price</string>
    <string name="your_number">your number</string>
    <string name="save_car">Save Car</string>
    <string name="manufacture">Manufacture</string>
    <string name="get_number">Get Number</string>
    <string name="location">Location</string>
    <string name="i_m_interested">I\'m interested</string>
    <string name="open">open</string>
    <string name="owner">Owner:</string>
    <string name="my_items">My Items</string>
</resources>