<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_50_dp"
        android:fontFamily="@font/anton_regular"
        android:text="@string/create_new_account"
        android:textColor="@color/bg_black"
        android:textSize="@dimen/dimen_30_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50_dp"
        android:layout_marginHorizontal="@dimen/dimen_20_dp"
        android:layout_marginTop="@dimen/dimen_50_dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/txt_example_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/dimen_10_dp"
        app:layout_constraintTop_toBottomOf="@id/appNameTextView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50_dp"
        android:layout_marginHorizontal="@dimen/dimen_20_dp"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/dimen_10_dp"
        app:layout_constraintTop_toBottomOf="@id/emailEditText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/repeatPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50_dp"
        android:layout_marginHorizontal="@dimen/dimen_20_dp"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/dimen_10_dp"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50_dp"
        android:layout_marginHorizontal="@dimen/dimen_20_dp"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/dimen_10_dp"
        app:layout_constraintTop_toBottomOf="@id/repeatPasswordEditText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpButton"
        android:layout_width="@dimen/dimen_120_dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_15_dp"
        android:background="@drawable/bg_button"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>