<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:layoutDescription="@xml/auth_fragment_scene"
    android:layout_height="match_parent"
    tools:context=".presentation.auth_screen.AuthFragment">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/logInContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/arrowView"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/appNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_50_dp"
            android:fontFamily="@font/anton_regular"
            android:text="@string/app_name"
            android:textColor="@color/bg_black"
            android:textSize="@dimen/dimen_30_sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50_dp"
            android:layout_marginHorizontal="@dimen/dimen_20_dp"
            android:layout_marginTop="@dimen/dimen_150_dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/txt_example_email"
            android:paddingHorizontal="@dimen/dimen_10_dp"
            app:layout_constraintTop_toBottomOf="@id/appNameTextView" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50_dp"
            android:layout_marginHorizontal="@dimen/dimen_20_dp"
            android:layout_marginTop="@dimen/dimen_20_dp"
            android:background="@drawable/edit_text_bg"
            android:drawableEnd="@drawable/ic_eye"
            android:hint="@string/txt_password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/dimen_10_dp"
            app:layout_constraintTop_toBottomOf="@id/emailEditText" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logInButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_50_dp"
            android:layout_gravity="end"
            android:layout_margin="@dimen/dimen_15_dp"
            android:background="@drawable/bg_button"
            android:paddingHorizontal="@dimen/dimen_10_dp"
            android:text="@string/log_in"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/lineView"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/bg_black"
        app:layout_constraintBottom_toTopOf="@id/arrowView" />

    <View
        android:id="@+id/arrowView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_80_dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/leftArrowView"
        android:layout_width="@dimen/dimen_50_dp"
        android:layout_height="@dimen/dimen_50_dp"
        android:layout_marginStart="@dimen/dimen_20_dp"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_arrow_down"
        android:tint="@color/bg_black"
        app:layout_constraintStart_toStartOf="@id/arrowView"
        app:layout_constraintTop_toTopOf="@id/arrowView" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/rightArrowView"
        android:layout_width="@dimen/dimen_50_dp"
        android:layout_height="@dimen/dimen_50_dp"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:layout_marginEnd="@dimen/dimen_20_dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_arrow_down"
        android:tint="@color/bg_black"
        app:layout_constraintEnd_toEndOf="@id/arrowView"
        app:layout_constraintTop_toTopOf="@id/arrowView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/createNewAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:textColor="@color/bg_black"
        android:textSize="@dimen/dimen_19_sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/rightArrowView"
        app:layout_constraintEnd_toStartOf="@id/rightArrowView"
        app:layout_constraintStart_toEndOf="@id/leftArrowView"
        app:layout_constraintTop_toTopOf="@id/leftArrowView" />

    <include
        android:id="@+id/signUpContainer"
        layout="@layout/registration_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/arrowView" />
    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:indeterminateTint="@color/bg_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>
